[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Level_1.gd" type="Script" id=1]
[ext_resource path="res://IcePlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://YellowObstacle.tscn" type="PackedScene" id=3]
[ext_resource path="res://FirePlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://TileMap.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/HUD/ui_arrows_left.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36, 12 )

[node name="Level_1" type="Node2D"]
script = ExtResource( 1 )

[node name="IcePlayer" parent="." instance=ExtResource( 2 )]
position = Vector2( 625, 561 )

[node name="FirePlayer" parent="." instance=ExtResource( 4 )]
position = Vector2( 84, 563 )

[node name="Layout" parent="." instance=ExtResource( 5 )]
position = Vector2( 17, 599 )
tile_data = PoolIntArray( -1376256, 0, 0, -1376255, 0, 0, -1376254, 0, 0, -1376253, 0, 0, -1376252, 0, 0, -1376251, 0, 0, -1376250, 0, 0, -1376249, 0, 0, -1376248, 0, 0, -1376247, 0, 0, -1376246, 0, 0, -1376245, 0, 0, -1376244, 0, 0, -1376243, 0, 0, -1376242, 0, 0, -1376220, 0, 0, -1376219, 0, 0, -1376218, 0, 0, -1376217, 0, 0, -1376216, 0, 0, -1376215, 0, 0, -1376214, 0, 0, -1376213, 0, 0, -1376212, 0, 0, -1376211, 0, 0, -1376210, 0, 0, -1376209, 0, 0, -1376208, 0, 0, -1376207, 0, 0, -1376206, 0, 0, -1376205, 0, 0, -1376204, 0, 0, -1114097, 0, 0, -1114096, 0, 0, -1114095, 0, 0, -1114094, 0, 0, -1114093, 0, 0, -1114092, 0, 0, -1114091, 0, 0, -1114083, 0, 0, -1114082, 0, 0, -1114081, 0, 0, -1114080, 0, 0, -1114079, 0, 0, -1114078, 0, 0, -1114077, 0, 0, -786410, 0, 0, -786409, 0, 0, -786408, 0, 0, -786407, 0, 0, -786406, 0, 0, -786405, 0, 0, -786404, 0, 0, -458723, 0, 0, -458722, 0, 0, -458721, 0, 0, -458720, 0, 0, -458719, 0, 0, -458718, 0, 0, -458717, 0, 0, -458716, 0, 0, -458715, 0, 0, -458714, 0, 0, -458713, 0, 0, -458712, 0, 0, -458711, 0, 0, -458710, 0, 0, -458709, 0, 0, -458708, 0, 0, -393188, 0, 0, -393187, 0, 0, -327653, 0, 0, -327652, 0, 0, -327651, 0, 0, -327631, 0, 0, -327630, 0, 0, -327629, 0, 0, -327628, 0, 0, -262118, 0, 0, -262117, 0, 0, -262116, 0, 0, -262115, 0, 0, -196583, 0, 0, -196582, 0, 0, -196581, 0, 0, -196580, 0, 0, -196579, 0, 0, -131048, 0, 0, -131047, 0, 0, -131046, 0, 0, -131045, 0, 0, -131044, 0, 0, -131043, 0, 0, -1, 1, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 1, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, -65504, 0, 0, -65503, 0, 0, -65502, 0, 0, -65501, 0, 0, -65500, 0, 0, -65499, 0, 0, -65498, 0, 0, -65497, 0, 0, -65496, 0, 0, -65495, 0, 0, -65494, 0, 0, -65493, 0, 0, -65492, 0, 0, -65491, 0, 0, -65490, 0, 0, -65489, 0, 0, -65488, 0, 0, -65487, 0, 0, -65486, 0, 0, -65485, 0, 0, -65484, 0, 0 )

[node name="YellowObstacle" parent="." instance=ExtResource( 3 )]
position = Vector2( 845, 579 )

[node name="BlueObstacle" parent="." instance=ExtResource( 3 )]
position = Vector2( 352, 293 )

[node name="Finish" type="Area2D" parent="."]
position = Vector2( 180, 207 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Finish"]
position = Vector2( 6, -2 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Finish"]
position = Vector2( 0, -1 )
scale = Vector2( 0.16762, 0.113344 )
texture = ExtResource( 6 )

[connection signal="body_entered" from="Finish" to="." method="_on_Finish_body_entered"]
